--- a/tests/lexer.html
+++ b/tests/lexer.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=7" />
 <title>query.orangevolt.parse - lexer testcase</title>
 
 <link type="text/css" rel="stylesheet" media="screen" href="testsuite.css"/>
-
+<link type="text/css" rel="stylesheet" media="screen" href="jquery.orangevolt-parse.css"/>
 <script language="javascript" src="../lib/jquery-1.3.2.js"></script>
 <script language="javascript" src="lib/jqUnit.js"></script>
 <script language="javascript" src="../jquery.orangevolt-parse.js"></script>
