--- a/tests/parser.html
+++ b/tests/parser.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=7" />
 <title>query.orangevolt.parse - parser testcase</title>
 
 <link type="text/css" rel="stylesheet" media="screen" href="testsuite.css"/>
-
+<link type="text/css" rel="stylesheet" media="screen" href="jquery.orangevolt-parse.css"/>
 <script language="javascript" src="../lib/jquery-1.3.2.js"></script>
 <script language="javascript" src="lib/jqUnit.js"></script>
 <script language="javascript" src="../jquery.orangevolt-parse.js"></script>
@@ -455,32 +457,31 @@ with( jqUnit) {
 			equals( ' + tetraeder', reader.charsLeft);
 
 			var output = $('<div>'); 
-			output.append( $('<p style="width:2000px">').append( ast.html()));
+			output.append( ast.html());
 
 			var optimizer = function() {
 					switch( this.rule.token) {
 						// throw away '(' and ')' asts
-					case 'open_brace'		:
+					case 'open_brace'		: debugger;
 					case 'close_brace'  	: return undefined;
+					
 						// throw away empty r_expr asts
 					case 'r_expr' 			: return this.children.length ? this : undefined;
-						// replace mult_div and plus_minus by their first child (the operation token ast)  
-					case 'plus_minus'		: 
-					case 'mult_div' 		: 
-						// replace expr by its child 
-					case 'expr'				: return this.children[0];
 
+					case 'plus_minus'		: 
+					case 'mult_div' 		:
+					case 'expr'				: 
 					case 'atom'				: 
 					case 'mexpr'			: return this.children[0];
-					
-					default 				: return this;
 				}
+
+				return this;
 			};
 			
 				// remodel ast
 			ast = ast.purge( optimizer);
 
-			output.append( $('<p style="width:2000px">').append( ast.html()));
+			output.append( ast.html());
 
 			var calculatorVisitor = function( ast, context) {
 				switch( ast.rule.token) {
@@ -531,26 +532,25 @@ with( jqUnit) {
 				}
 			};
 
-			equals( 575, optimizedCalculatorVisitor( ast));
+			equals( optimizedCalculatorVisitor( ast), 575);
 			
 			var ast = g.parse( '23*(14+4*(8+1))/4');
-			output.append( $('<p style="width:2000px">').append( ast.html()));
-			equals( 287.5, calculatorVisitor( ast));
+			output.append( ast.html());
+			equals( calculatorVisitor( ast), 287.5);
 			
 			ast = ast.purge( optimizer);
-			output.append( $('<p style="width:2000px">').append( ast.html()));
-			equals( 287.5, optimizedCalculatorVisitor( ast));
+			output.append( ast.html());
+			equals( optimizedCalculatorVisitor( ast), 287.5);
 
 			ast = g.parse( '  34.5 + 6 / 3.002');
 			ast = ast.purge( optimizer);
-			output.append( $('<p style="width:2000px">').append( ast.html()));
+			output.append( ast.html());
 			
 			var value = optimizedCalculatorVisitor( ast);
 			equals( 36.498667554963355, value);
 
 			setTimeout( function() {
-				$( '<p id="dump" style="font-family: monospace"><h3>output</h3></p>')
-				.append( output).appendTo( 'body');
+				output.appendTo( 'body');
 			}, 10);
 			
 		 }
